# Media_Player_Diplom

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mediaplayer.cpp  mediaplayer.h  settingswindow.cpp  settingswindow.h  theme.h  thememanager.cpp  thememanager.h
